--- a/dashboard/faq.html
+++ b/dashboard/faq.html
@@ -365,7 +365,8 @@
               we release each new version of XAMPP we run it through virus scanning software. At the moment we are using
               <a href="http://www.kaspersky.com/virusscanner">Kapersky Online Virus Scanner</a>. You can also use the
               online tool <a href="https://www.virustotal.com/">Virus Total</a> for scanning XAMPP or send us an email
-              to security (at) apachefriends (dot) org if you find any issue.</p>
+              to security (at) apachefriends (dot) org if you find any issue.
+            </p>
           </dd>
 
           <dt>How do I configure my antivirus application?</dt>
